--- a/info.html
+++ b/info.html
@@ -260,10 +260,7 @@
                                             style="height: 16rem;"></textarea>
                                         <p style="text-align: initial;font-size: 11px;">Os dados recolhidos, serão
                                             utilizados exclusivamente para prestar as
-                                            informações comerciais dos serviços solicitados. Os
-                                            dados recolhidos serão arquivados por um prazo de 3 meses, sendo
-                                            posteriormente apagados dos servidores do Centro Pré e
-                                            Pós Parto. Para mais informações leia a política de privacidade do Centro
+                                            informações comerciais dos serviços solicitados. Para mais informações leia a política de privacidade do Centro
                                             Pré e Pós Parto
 
                                             Poderá solicitar qualquer esclarecimento por e-mail para
