--- a/pages/footer.html
+++ b/pages/footer.html
@@ -23,7 +23,7 @@
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">Consultas</h4>
                                 <p>
-                    <a href="pages/pediatria.html" class="text-white"><b>Pediatria</b></a>
+                    <a href="pages/pediatria.html" class="text-white"><strong>Pediatria</strong></a>
                 </p>
                 <p>
                     <a href="amament-pre-parto.html" class="text-white">Amamentação</a>
