--- a/humanitario.html
+++ b/humanitario.html
@@ -103,9 +103,9 @@
     </header>
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-9">
+    <section class="blog-details  mb-0 spad mt-4">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg mb-2" data-setbg="img/blog/details/blog-hero7.jpg">
+            <div class="blog__details__hero set-bg mb-2" data-setbg="img/hm/cover.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                         <div class="col-lg-7 text-center">
                             <div class="blog__hero__text">
@@ -131,7 +131,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="mb-3"> <i>N’A Clínica</i> temos plena consciência de que somos privilegiados. Não
+                            <p class=""> <i>N’A Clínica</i> temos plena consciência de que somos privilegiados. Não
                                 somos,
                                 contudo,
                                 alheios ao mundo que nos rodeia e às
@@ -147,7 +147,7 @@
     <!-- Blog Details Section End -->
 
 
-    <section class="services-page spad mb-4">
+    <section class="services-page spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 order-lg-12">
@@ -169,126 +169,41 @@
 
 
                         </div>
-                        <div class="row">
-                            <div class="img-group d-flex">
-                                <div class="col-sm-4">
-                                    <div class="img-sing">
-                                        <img src="img/hm/hm-1.jpeg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="img-sing">
-                                        <img src="img/hm/hm-2.jpeg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="img-sing">
-                                        <img src="img/hm/hm-3.jpeg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="services__details__desc">
-                            <p>Atque eum alias debitis suscipit, sint dignissimos minus quisquam recusandae nostrum quas
-                                eligendi odit, fugiat eius rem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </p>
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <ul class="services__details__feature">
-                                        <li><i class="fa fa-check-circle"></i> Routine and medical care</li>
-                                        <li><i class="fa fa-check-circle"></i> Excellence in Healthcare every</li>
-                                        <li><i class="fa fa-check-circle"></i> Building a healthy environment</li>
-                                        <li><i class="fa fa-check-circle"></i> cumsan lacus vel facilisis.</li>
-                                    </ul>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <ul class="services__details__feature">
-                                        <li><i class="fa fa-check-circle"></i> Routine and medical care</li>
-                                        <li><i class="fa fa-check-circle"></i> Excellence in Healthcare every</li>
-                                        <li><i class="fa fa-check-circle"></i> Building a healthy environment</li>
-                                        <li><i class="fa fa-check-circle"></i> cumsan lacus vel facilisis.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque eum alias debitis
-                                suscipit, sint dignissimos minus quisquam recusandae nostrum quas eligendi odit, fugiat
-                                eius rem. Cumque, labore placeat! Velit, vitae. Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.</p>
-                        </div> -->
+
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    <section class="services-page spad ">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 order-lg-12">
-                    <div class="services__details">
-                        <div class="row mb-4">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                <div class="services__details__title">
-                                    <h4>2. Visita ao Orfanato Feminino Casa Madre Maria Clara em Maputo</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="services__details__text">
-                            <p class="mb-3">Instituição que alberga cerca de 70 meninas. Beneficiou de uma angariação de
-                                produtos alimentares e de higiene em que a
-                                Dra Inês Claudino participou de forma ativa em 2023 e 2024. Foram doados ao longo de
-                                2024 medicamentos em várias
-                                ocasiões à Madre Elisa, madre deste Orfanato.</p>
-
-
-                        </div>
-                        <div class="row">
-                            <div class="img-group d-flex">
-                                <div class="col-sm-4">
-                                    <div class="img-sing">
-                                        <img src="img/hm/hm-1.jpeg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="img-sing">
-                                        <img src="img/hm/hm-2.jpeg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="img-sing">
-                                        <img src="img/hm/hm-3.jpeg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="services__details__desc">
-                                <p>Atque eum alias debitis suscipit, sint dignissimos minus quisquam recusandae nostrum quas
-                                    eligendi odit, fugiat eius rem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                </p>
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-6">
-                                        <ul class="services__details__feature">
-                                            <li><i class="fa fa-check-circle"></i> Routine and medical care</li>
-                                            <li><i class="fa fa-check-circle"></i> Excellence in Healthcare every</li>
-                                            <li><i class="fa fa-check-circle"></i> Building a healthy environment</li>
-                                            <li><i class="fa fa-check-circle"></i> cumsan lacus vel facilisis.</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6">
-                                        <ul class="services__details__feature">
-                                            <li><i class="fa fa-check-circle"></i> Routine and medical care</li>
-                                            <li><i class="fa fa-check-circle"></i> Excellence in Healthcare every</li>
-                                            <li><i class="fa fa-check-circle"></i> Building a healthy environment</li>
-                                            <li><i class="fa fa-check-circle"></i> cumsan lacus vel facilisis.</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque eum alias debitis
-                                    suscipit, sint dignissimos minus quisquam recusandae nostrum quas eligendi odit, fugiat
-                                    eius rem. Cumque, labore placeat! Velit, vitae. Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit.</p>
-                            </div> -->
-                    </div>
+        <div class="gallery mt-0">
+            <div class="gallery__container" style="position: relative; height: 716px;">
+                <div class="grid-sizer"></div>
+                <div class="gc__item set-bg" data-setbg="img/hm/1.jpg"
+                    style="background-image: url(&quot;img/hm/1.jpg&quot;); position: absolute; left: 0px; top: 0px;">
+                    <a href="img/hm/1.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                </div>
+                <div class="gc__item set-bg" data-setbg="img/hm/2.jpg"
+                    style="background-image: url(&quot;img/hm/2.jpg&quot;); position: absolute; left: 259.2px; top: 0px;">
+                    <a href="img/hm/2.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                </div>
+                <div class="gc__item set-bg" data-setbg="img/hm/3.jpg"
+                    style="background-image: url(&quot;img/hm/3.jpg&quot;); position: absolute; left: 518.4px; top: 0px;">
+                    <a href="img/hm/3.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                </div>
+                <div class="gc__item gc__item__large set-bg" data-setbg="img/hm/4.jpg"
+                    style="background-image: url(&quot;img/hm/4.jpg&quot;); position: absolute; left: 777.6px; top: 0px;">
+                    <a href="img/hm/4.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                </div>
+                <div class="gc__item set-bg" data-setbg="img/hm/5.jpg"
+                    style="background-image: url(&quot;img/hm/5.jpg&quot;); position: absolute; left: 0px; top: 358px;">
+                    <a href="img/hm/5.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                </div>
+                <div class="gc__item set-bg" data-setbg="img/hm/6.jpg"
+                    style="background-image: url(&quot;img/hm/6.jpg&quot;); position: absolute; left: 259.2px; top: 358px;">
+                    <a href="img/hm/6.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                </div>
+                <div class="gc__item set-bg" data-setbg="img/hm/7.jpg"
+                    style="background-image: url(&quot;img/hm/7.jpg&quot;); position: absolute; left: 518.4px; top: 358px;">
+                    <a href="img/hm/7.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                 </div>
             </div>
         </div>
