--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -219,7 +219,7 @@
                                     gravidezes prévias e a sua experiência anterior de amamentação.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -261,7 +261,7 @@
                                     <b>Importante:</b> Esta consulta inclui a recolha da história clínica da amamentação atual e prévias (se procede), o exame físico da paciente e do seu bebé e a observação da mamada. Traga o seu Boletim de Saúde de Grávida e o Boletim de Saúde do seu bebé. Aconselhamos a que ambos vistam roupas confortáveis e apropriadas à amamentação.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
