--- a/pages/cirurgia.html
+++ b/pages/cirurgia.html
@@ -206,7 +206,7 @@
                                     mesmo.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                                             aplicada anestesia local.</a></li>
                                 </ul>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -272,7 +272,7 @@
                                             de cola biológica quando for mais indicado.</a></li>
                                 </ul>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
