--- a/pages/curso-amamentacao-indiv.html
+++ b/pages/curso-amamentacao-indiv.html
@@ -30,8 +30,9 @@
 
     <style>
         .services__item:hover {
-    background: #d6a294;
-}
+            background: #d6a294;
+        }
+
         .services__item {
             background: #b1cad4;
             padding: 45px 30px 45px 50px;
@@ -411,7 +412,7 @@
                             </div>
                             <div class="services__details__desc">
                                 <div class="section-title  text-center mb-4">
-                                    <a href="#" class="primary-btn mt-4">Inscrever-me </a>
+                                    <a href="../info.html" class="primary-btn mt-4">Inscreva-se </a>
                                 </div>
                             </div>
                             <div class="section-title  text-center mb-4">
