--- a/pages/curso-prep-indiv.html
+++ b/pages/curso-prep-indiv.html
@@ -425,7 +425,7 @@
                             </div>
                             <div class="services__details__desc">
                                 <div class="section-title  text-center mb-4">
-                                    <a href="#" class="primary-btn mt-4">Inscrever-me </a>
+                                    <a href="../info.html" class="primary-btn mt-4">Inscreva-se </a>
                                 </div>
                             </div>
                             <div class="section-title  text-center mb-4">
