--- a/pages/curso.html
+++ b/pages/curso.html
@@ -1,4 +1,5 @@
-<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
 <!DOCTYPE html>
 <html lang="en">
 
@@ -355,7 +356,7 @@
                             </div>
                             <div class="services__details__desc">
                                 <div class="section-title  text-center mb-4">
-                                    <a href="#" class="primary-btn mt-4">Inscrever-me </a>
+                                    <a href="../info.html" class="primary-btn mt-4">Inscreva-se </a>
                                 </div>
                             </div>
                         </div>
