--- a/pages/domicilio.html
+++ b/pages/domicilio.html
@@ -283,7 +283,7 @@
                                     vistam roupas confortáveis.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -315,7 +315,7 @@
                                             ou mudança de pen</a></li>
                                 </ul>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
