--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer" style='background-image: url("../img/blog/details/blog-hero11.png");'>
     <div class="container text-md-start ">
         <!-- Grid row -->
-        <div class="row mt-3">
+        <div class="row">
             <!-- Grid column -->
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 text-white">
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto text-white">
                 <!-- Content -->
                 <div class="footer-logo mb-2"><img src="../img/footer-logo1.png" alt=""></div>
                 <p>
@@ -19,10 +19,10 @@
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto ">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">Consultas</h4>
-                                <p>
+                <p>
                     <a href="pages/pediatria.html" class="text-white"><strong>Pediatria</strong></a>
                 </p>
                 <p>
@@ -51,7 +51,7 @@
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto ">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold text-white mb-2">links úteis</h4>
                 <p>
@@ -84,17 +84,25 @@
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0  text-white">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold mb-2">Contacto</h4>
                 <p><img src="../img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg. a Sex.
-                    8:00 às 18:00  | Sab: 9h às 12h</p>
+                    8:00 às 18:00 | Sab: 9h às 12h</p>
                 <p><img src="../img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
                     geral@aclinica-mz.com</p>
                 <p><img src="../img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
                     869 7194</p>
                 <p><img src="../img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
                     Shopping 24, Avenida 24 de Julho, Loja 20 (R/C, corredor central ao lado do cabeleireiro)</p>
+                <div class="col-lg-12 col-md-12 mt-4">
+                    <div class="footer__newslatter">
+                        <form action="#">
+                            <input type="text" placeholder="Email">
+                            <button type="submit" class="site-btn">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
             </div>
             <!-- Grid column -->
         </div>
