--- a/pages/terapia.html
+++ b/pages/terapia.html
@@ -194,7 +194,7 @@
                                     paciente. Aconselhamos a que a criança traga roupas confortáveis.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -252,7 +252,7 @@
                                     paciente. Aconselhamos a que o paciente traga roupas confortáveis.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                                     tragam roupas confortáveis.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -355,7 +355,7 @@
                                     paciente. Aconselhamos a que o paciente traga roupas confortáveis.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -432,7 +432,7 @@
                                     traga roupas confortáveis.
                                 </p>
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
