--- a/pages/teste.html
+++ b/pages/teste.html
@@ -236,7 +236,7 @@
                                     que se inicie o tratamento o mais rápido possível. </p>
 
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                                 </P>
 
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                                 </p>
 
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
 
 
                             </div>
-                            <a href="#" class="primary-btn">Marcar Consulta </a>
+                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
