--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -169,7 +169,7 @@
                                             de vacinação de todos os elementos da família que vão viajar.
                                         </p>
                                     </div>
-                                    <a href="#" class="primary-btn">Marcar Consulta </a>
+                                    <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                                 </div>
                             </div>
                         </div>
