--- a/pages/header.html
+++ b/pages/header.html
@@ -205,13 +205,14 @@
                         <li><a class="arrow" href="../additional-services.html">Workshops<span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">Amamentação</a></li>
-                                <li><a href="#">Bebé</a></li>
-                                <li><a href="#">Gravidez</a></li>
-                                <li><a href="#">Introdução alimentar</a></li>
-                                <li><a href="#">Parentalidade</a></li>
-                                <li><a href="#">Pediatria</a></li>
-                                <li><a href="#">Primeiros Socorros Pediátricos</a></li>
+                                <li><a href="workshop.html">Workshops</a></li>
+                                <li><a href="workshop-amament.html">Amamentação</a></li>
+                                <li><a href="workshop-bebe.html">Bebé</a></li>
+                                <li><a href="workshp-gravidez.html">Gravidez</a></li>
+                                <li><a href="worshop-Parentalidade.html">Introdução alimentar</a></li>
+                                <li><a href="worshop-Parentalidade.html">Parentalidade</a></li>
+                                <li><a href="Workshop-pediatria.html">Pediatria</a></li>
+                                <li><a href="workshop-primeiros-socoros.html">Primeiros Socorros Pediátricos</a></li>
                                 <li><a href="#">Galeria de fotos</a></li>
                             </ul>
                         </li>
