--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -118,8 +118,8 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-5">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/mae-amamentando.jpg"
-                style="background: url('../img/blog/details/mae-amamentando.jpg') no-repeat center center/cover; height: 400px;">
+            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/amame.jpg"
+                style="background: url('../img/blog/details/amame.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="row d-flex justify-content-start h-100">
                     <div class="col-lg-7 text-start d-flex align-items-start">
                         <div class="blog__hero__text p-4 rounded shadow"
@@ -186,7 +186,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/sono.jpg">
+                                            data-setbg="../img/blog/details/mae-deitada.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
@@ -239,7 +239,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/amame.jpg">
+                                            data-setbg="../img/blog/details/mae-amamentando.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
