--- a/pages/workshop-bebe.html
+++ b/pages/workshop-bebe.html
@@ -325,7 +325,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bebe.jpg">
+                                            data-setbg="../img/blog/details/bebe-a-dormir-de-bariga.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
