--- a/pages/worshop-Parentalidade.html
+++ b/pages/worshop-Parentalidade.html
@@ -170,7 +170,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/152.jpg">
+                                            data-setbg="../img/blog/details/bira.jpg">
                                             <a href="#" class="play-btn video-popup">presencial - 20/1/2025</a>
                                         </div>
                                     </div>
