--- a/pages/Workshop-pediatria.html
+++ b/pages/Workshop-pediatria.html
@@ -174,7 +174,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/152.jpg">
+                                            data-setbg="../img/blog/details/crianca-a-tossir.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
