--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -186,7 +186,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/mae-deitada.jpg">
+                                            data-setbg="../img/blog/details/sono.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
@@ -239,7 +239,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/mae-amamentando.jpg">
+                                            data-setbg="../img/blog/details/amame.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
