--- a/pages/workshop-bebe.html
+++ b/pages/workshop-bebe.html
@@ -170,7 +170,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bebe-e-mae.jpg">
+                                            data-setbg="../img/blog/details/sono.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
@@ -222,7 +222,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bebe-no-colo.jpg">
+                                            data-setbg="../img/blog/details/mae-com-bebe.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
@@ -273,7 +273,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bebe-a-gatinhar.jpg">
+                                            data-setbg="../img/blog/details/bebe.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
@@ -325,7 +325,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bebe-a-dormir-de-bariga.jpg">
+                                            data-setbg="../img/blog/details/bebe.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
