--- a/pages/workshop-primeiros-socoros.html
+++ b/pages/workshop-primeiros-socoros.html
@@ -119,8 +119,8 @@
     <section class="blog-details spad mt-5">
         <div class="container mt-9">
             <div class="blog__details__hero set-bg mb-2 position-relative"
-                data-setbg="../img/blog/details/socoros.jpg"
-                style="background: url('../img/blog/details/socoros.jpg') no-repeat center center/cover; height: 400px;">
+                data-setbg="../img/blog/details/pediatria.jpg"
+                style="background: url('../img/blog/details/pediatria.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="row d-flex justify-content-start h-100">
                     <div class="col-lg-7 text-start d-flex align-items-start">
                         <div class="blog__hero__text p-4 rounded shadow"
@@ -175,7 +175,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/engasgado.jpg">
+                                            data-setbg="../img/blog/details/152.jpg">
                                             <a href="#" class="play-btn video-popup">Presencial - 14/06/2025</a>
                                         </div>
                                     </div>
