--- a/pages/worshop-Parentalidade.html
+++ b/pages/worshop-Parentalidade.html
@@ -118,7 +118,7 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-5">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/parents.jpg"
+            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/dad.jpg"
                 style="background: url('../img/blog/details/daad.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="row d-flex justify-content-start h-100">
                     <div class="col-lg-7 text-start d-flex align-items-start">
@@ -170,7 +170,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bira.jpg">
+                                            data-setbg="../img/blog/details/152.jpg">
                                             <a href="#" class="play-btn video-popup">presencial - 20/1/2025</a>
                                         </div>
                                     </div>
