--- a/humanitario.html
+++ b/humanitario.html
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </div>
-        <div class="gallery mt-0">
+        <div class="gallery container mt-0">
             <div class="gallery__container" style="position: relative; height: 716px;">
                 <div class="grid-sizer"></div>
                 <div class="gc__item set-bg" data-setbg="img/hm/1.jpg"
