--- a/humanitario.html
+++ b/humanitario.html
@@ -189,9 +189,9 @@
                     style="background-image: url(&quot;img/hm/3.jpg&quot;); position: absolute; left: 518.4px; top: 0px;">
                     <a href="img/hm/3.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                 </div>
-                <div class="gc__item gc__item__large set-bg" data-setbg="img/hm/4.jpg"
-                    style="background-image: url(&quot;img/hm/4.jpg&quot;); position: absolute; left: 777.6px; top: 0px;">
-                    <a href="img/hm/4.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                <div class="gc__item gc__item__large set-bg" data-setbg="img/hm/4.png"
+                    style="background-image: url(&quot;img/hm/4.png&quot;); position: absolute; left: 777.6px; top: 0px;">
+                    <a href="img/hm/4.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
                 </div>
                 <div class="gc__item set-bg" data-setbg="img/hm/5.jpg"
                     style="background-image: url(&quot;img/hm/5.jpg&quot;); position: absolute; left: 0px; top: 358px;">
