--- a/about.html
+++ b/about.html
@@ -232,8 +232,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 d-flex justify-content-center">
-                    <div class="consultation__video set-bg" data-setbg="img/video.jpg">
-                        <a href="https://www.youtube.com/watch?v=PXsuI67s2AA" class="play-btn video-popup">
+                    <div class="consultation__video set-bg" data-setbg="img/video.jpeg">
+                        <a href="" class="play-btn video-popup">
                             <i class="fa fa-play"></i>
                         </a>
                     </div>
